[package]
name = "reedstyle"
version = "0.1.0"
edition = "2024"
authors = ["Vivian Burkhard Voss <vivian.voss@byvoss.tech>", "ByVoss Technologies"]
license = "Apache-2.0"
description = "Semantic HTML styling system - Write HTML, get beautiful designs"

[dependencies]
# Core dependencies
lightningcss = { version = "1.0.0-alpha.67" }
swc_core = { version = "0.87", features = ["ecma_parser", "ecma_transforms", "common"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Color conversion
palette = "0.7"
csscolorparser = "0.6"

# File system and utilities
walkdir = "2.4"
glob = "0.3"
regex = "1.10"
lazy_static = "1.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"

# Performance
rayon = "1.8"

# File watching (for development)
notify = "6.1"
tokio = { version = "1.40", features = ["rt", "macros"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
pretty_assertions = "1.4"
